added test for hw1