@@ -1,7 +1,6 @@
 apply plugin: 'java'
 
 sourceCompatibility = 10
-targetCompatibility = 10
 
 repositories {
     jcenter()
@@ -12,15 +11,14 @@ dependencies {
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
     compile group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '2.27'
 
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
+    compile 'javax.activation:activation:1.1.1'
+
     compile 'junit:junit:4.12'
     compile 'org.hamcrest:hamcrest-all:1.3'
 
     compileOnly('org.projectlombok:lombok:1.18.2')
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += ["--add-modules", "java.xml.bind"]
 }
 
 task runTest(type: JavaExec) {
